--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "sources_non_forked/syntastic"]
 	path = sources_non_forked/syntastic
 	url = git://github.com/scrooloose/syntastic.git
+[submodule "sources_non_forked/tabular"]
+	path = sources_non_forked/tabular
+	url = git://github.com/godlygeek/tabular.git
