--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "sources_non_forked/tabular"]
 	path = sources_non_forked/tabular
 	url = git://github.com/godlygeek/tabular.git
+[submodule "sources_non_forked/vim-puppet"]
+	path = sources_non_forked/vim-puppet
+	url = git://github.com/rodjek/vim-puppet.git
